# azai

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Dockerfile  README.md  compose.yml  db  docker-compose.yml  pyproject.toml
backend/: pyproject.toml
backend/src/: api.py
backend/src/frontend/: app.py  auth.py
backend/src/rag/: __init__.py  chunking.py  embedding.py  extraction.py  generation.py  retrieval.py  sitemap.py  tokenizer.py
backend/src/web/: main.py
cli/: pyproject.toml
cli/cli/: __main__.py  app.py  main.py  settings.py  utils.py
cli/cli/commands/: chunk.py  embed.py  extract.py  query.py  system.py
database/: pyproject.toml
frontend/: package-lock.json  package.json  pyproject.toml  tailwind.config.js
frontend/frontend/: app.py  auth.py  settings.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AynzamInterface.tsx
rag/: pyproject.toml
rag/rag/: tokenizer.py
