[project]
name = "backend"
version = "0.1.0"
description = "PureChat Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # From database
    "pydantic-settings>=2.7.0,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic>=2.10.4,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "sqlmodel>=0.0.22,<1.0.0",
    "pgvector>=0.3.6,<1.0.0",
    "pre-commit>=4.1.0,<5.0.0",
    
    # From rag
    "docling>=2.25.0,<3",
    "transformers>=4.42.0,<4.43.0",
    "tiktoken>=0.9.0,<0.10",
    "openai>=1.65.2,<2",
    
    # From frontend
    "langchain>=0.3.18,<0.4",
    "langchain-community>=0.3.17,<0.4",
    "docx2txt>=0.8,<0.9",
    "pypdf>=5.3.0,<6",
    "unstructured[pdf]>=0.16.20,<0.17",
    "streamlit>=1.42.2,<2",
]

# Ruff configuration
[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ERA001", # commented-out-code
    "FIX002", # line-contains-to.do
    "TD002", # missing-to.do-author
    "TD003", # missing-to.do-link
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
    "D107", # undocumented-public-init
    "ANN204", # missing-return-type-special-method
    "INP001", # implicit-namespace-package
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "B008", # function-call-in-default-argument
    "W191", # tab-indentation
    "E111", # indentation-with-invalid-multiple
    "E114", # indentation-with-invalid-multiple-comment
    "E117", # over-indented
    "D206", # indent-with-space
    "D300", # triple-single-quotes
    "Q000", # bad-quotes-inline-string
    "Q001", # bad-quotes-multiline-string
    "Q002", # bad-quotes-docstring
    "Q003", # avoidable-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibit-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "ISC002" # multi-line-implicit-string-concatenation
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database", "src/rag", "src/frontend"]
