[project]
name = "database"
version = "0.1.0"
description = ""
authors = [{ name = "Mustafa Yasin", email = "myasin@adobe.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic-settings>=2.7.0,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic>=2.10.4,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "sqlmodel>=0.0.22,<1.0.0",
    "pgvector>=0.3.6,<1.0.0",
    "pre-commit>=4.1.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../pyproject.toml"