[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Mustafa Yasin <myasin@adobe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
docling = "^2.25.0"
transformers = ">=4.42.0,<4.43.0"
tiktoken = "^0.9.0"
openai = "^1.65.2"
database = { path = "../database" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend = "../pyproject.toml"
