[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [{ name = "Mustafa Yasin", email = "myasin@adobe.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "docling>=2.25.0,<3",
    "transformers>=4.42.0,<4.43.0",
    "tiktoken>=0.9.0,<0.10",
    "openai>=1.65.2,<2",
    "database",
]

[tool.uv.sources]
database = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
extend = "../pyproject.toml"